@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * fix Salesforce API (thanks to https://github.com/jhorowitz-firedrum)
+
 [5.2.0-java7again]
  * allow 'null' as callback. It's an optional parameter. Remove "oob" as default (thanks to https://github.com/massongit)
  * java7 compatible again!
